fix IE11 layout bug

--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -7,6 +7,7 @@ body {
 .layout {
     display: flex;
     flex-direction: column;
+    height: 99.99vh; // IE11 flexbox column bug
     min-height: 100%;
     min-height: 100vh;
     position: relative;
